🏋🍝 Checkpoint ./public/script.js:27940396/1480 ./views/partials/menu.hbs:27940396/1087 ./views/start.hbs:27940396/31

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,14 +1,15 @@
 <nav class="ui menu" id="menu">
   <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
   
-
-  <div class=" menu">
-    <button class="ui toggle green button" onclick = "darkmode()">
-    Toggle Darkmode <i class="window maximize outline icon"></i>
-  </button>
-    <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
+  <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
     <a id="about" class="item" href="/about"> About</a>
   </div>
+  <div class="right menu">
+
+  
+      <button class="ui blue button" id="tgl" onclick = "darkmode()">
+    Toggle Darkmode <i class="window maximize outline icon"></i>
+  </button>
 </nav>
 
 <script>
