--- a/views/start.hbs
+++ b/views/start.hbs
@@ -14,7 +14,7 @@
             </button>
             <button
               class="ui green button"
-                onclick="alert('Buy me a drink first ')"
+                onclick="alert('Thanks!!!!! ')"
             >
               Like it? <i class="thumbs up icon"></i>
             </button>
