🌴🏋 Checkpoint ./public/script.js:27940396/147 ./views/partials/menu.hbs:27940396/2 ./views/about.hbs:27940396/17 ./views/partials/addteam.hbs:27940396/19 ./views/partials/addleague.hbs:27940396/68

--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -7,7 +7,7 @@
 
 <div id="league">
   
-<form class="ui center aligned segment form" action="/dashboard/addleague" method="POST">
+<form class="ui center aligned stacked segment form" action="/dashboard/addleague" method="POST">
 
 
   <div class="two fields">
