--- a/views/partials/addteam.hbs
+++ b/views/partials/addteam.hbs
@@ -4,7 +4,7 @@
 
 <div id="league">
 
-<form class="ui stacked segment form" action="/league/{{league.id}}/addteam" method="POST">
+<form class="ui center aligned stacked segment form" action="/league/{{league.id}}/addteam" method="POST">
   <div class="two fields">
     <div class="field">
       <label for="title" class ="lbl">Name</label>
