--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -7,7 +7,7 @@
   <div class="right menu">
 
   
-      <button class="ui blue button" id="tgl" onclick = "darkmode()">
+      <button class="ui blue button" id="tgl" onclick = "darkMode()">
     Toggle Darkmode <i class="window maximize outline icon"></i>
   </button>
 </nav>
