--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
 {{> menu id="about"}}
 
 <section class="ui center aligned middle aligned segment">
-  <h2 class="ui header" id="description">
+  <h2 class="ui header">
     The league app team:
   </h2>
 
