💽😬 Checkpoint ./views/about.hbs:27940396/98

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,7 +4,10 @@
   <h2 class="ui header">
     The league app team:
   </h2>
-
+<p>
+  Contact us at: realcompany123@web.com <br>
+  or 353 083 123123456
+  </p>
   <div class="ui centered cards">
 {{#each developers}}
       {{> listdevelopers}}
