--- a/views/start.hbs
+++ b/views/start.hbs
@@ -1,6 +1,6 @@
 
 {{> menu}}      
-<section class="ui center aligned middle aligned two column grid segment">
+<section class="ui center aligned two column grid segment">
         <div class="ui column">
           <h1>Welcome to the Football App!</h1>
 
