👹😂 Checkpoint ./models/league-store.json:27940396/14835 ./models/league-store.js:27940396/113 ./package.json:27940396/31 ./server.js:27940396/72 ./models/user-store.json:27940396/586 ./models/user-store.js:27940396/554 ./views/index.hbs:27940396/121 ./view/login.hbs:27940396/458 ./views/signup.hbs:27940396/829 ./views/partials/welcomemenu.hbs:27940396/319 ./views/partials/menu.hbs:27940396/59 ./public/style.css:27940396/118 ./controllers/accounts.js:27940396/1779 ./routes.js:27940396/988 ./views/login.hbs:27940396/458

--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,13 @@ body {
     background-image: repeating-linear-gradient(to right,lightgray, #262626);
 
 }
-
+.name{
+  padding-top:20px;
+  padding-right:5px;
+  line-height:20px;
+  font-weight:bold;
+  text-transform:capitalize;
+}
 h1 {
   font-style: italic;
   color: #4d54ff;
