--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -3,6 +3,7 @@
   
   <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
     <a id="about" class="item" href="/about"> About</a>
+   <a id="logout" class="item" href="/logout"> Logout </a>
   </div>
   <div class="right menu">
 
