🧀🏀 Checkpoint ./controllers/start.js:27940396/145 ./controllers/league.js:27940396/670 ./views/start.hbs:27940396/16 ./views/partials/menu.hbs:27940396/5 ./controllers/accounts.js:27940396/51

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -2,7 +2,7 @@
 {{> menu}}      
 <section class="ui center aligned middle aligned two column grid segment">
         <div class="ui column">
-          <h1>Welcome to the Football App!</h1>
+          <h1>Welcome to the Football App, {{fullname}}!</h1>
 
           <p>
             This app will allow users to create and maintain a collection of
