--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -7,7 +7,7 @@
 
 <div id="league">
   
-<form class="ui center aligned stacked segment form" action="/dashboard/addleague" method="POST" enctype="multipart/form-data">
+<form class="ui center aligned stacked segment form" action="/dashboard/addleague" enctype="multipart/form-data" method="POST" >
 
 
   <div class="two fields">
@@ -33,8 +33,8 @@
   </select>
     </div>
         <div class="field">
-      <label>Image</label>
-      <input placeholder="Image" type="file" name="logo" required>
+      <label>League Logo</label>
+      <input placeholder="logo" type="file" name="logo" required>
     </div>
       </div>
   <button class="ui blue submit button">Add League</button>
