👘🚔 Checkpoint ./models/league-store.js:27940396/128 ./views/start.hbs:27940396/52 ./controllers/start.js:27940396/26 ./views/partials/addteam.hbs:27940396/30

--- a/views/partials/addteam.hbs
+++ b/views/partials/addteam.hbs
@@ -32,15 +32,15 @@
   <div class="three fields">
     <div class="field" >
     <label class ="lbl">Champions League</label>  
-    <input type="radio" name="europeanleague" value="https://upload.wikimedia.org/wikipedia/en/thumb/b/bf/UEFA_Champions_League_logo_2.svg/1200px-UEFA_Champions_League_logo_2.svg.png">
+    <input type="radio" name="europeanleague" value="https://upload.wikimedia.org/wikipedia/en/thumb/b/bf/UEFA_Champions_League_logo_2.svg/1200px-UEFA_Champions_League_logo_2.svg.png" required >
           </div>
     <div class="field">
     <label class ="lbl">Europa League</label>
-    <input type="radio" name="europeanleague" value="https://upload.wikimedia.org/wikipedia/en/thumb/0/03/Europa_League.svg/1200px-Europa_League.svg.png">
+    <input type="radio" name="europeanleague" value="https://upload.wikimedia.org/wikipedia/en/thumb/0/03/Europa_League.svg/1200px-Europa_League.svg.png" required >
           </div>
     <div class="field">
     <label class ="lbl">N/A</label>
-    <input type="radio" name="europeanleague" value="https://i.imgur.com/EwEBIry.png">
+    <input type="radio" name="europeanleague" value="https://i.imgur.com/EwEBIry.png" required >
     </div>
   </div>
   <button class="ui green submit button">Add Team</button>
