--- a/views/start.hbs
+++ b/views/start.hbs
@@ -41,18 +41,18 @@
 <div class="ui two statistics">
     <div class="ui huge statistic">
         <div class="value">
-            {{totalPlaylists}}
+            {{totalLeagues}}
         </div>
         <div class="label">
-            Playlists
+            Leagues
         </div>
     </div>
     <div class="ui huge statistic">
         <div class="value">
-            {{totalSongs}}
+            {{totalTeams}}
         </div>
         <div class="label">
-            Songs
+            Teams
         </div>
     </div>
 </div>
