🌏🐧 Checkpoint ./controllers/start.js:27940396/460 ./views/start.hbs:27940396/414

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -56,6 +56,15 @@
         </div>
     </div>
 </div>
+          <div class="ui three statistics">
+            <div class="ui small statistic">
+        <div class="value">
+            {{averageTeams}}
+        </div>
+        <div class="label">
+            Average Number Of Teams Per User
+        </div>
+          </div>
         </div>
         <div class="ui column">
           <div class="ui grid">
