🍍👩 Checkpoint ./controllers/start.js:27940396/96 ./views/start.hbs:27940396/19

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -62,7 +62,7 @@
             {{averageTeams}}
         </div>
         <div class="label">
-            Average Number Of Teams Per User
+            Average Number of<br>Teams Per User
         </div>
           </div>
         </div>
