🌑🍟 Checkpoint ./controllers/start.js:27940396/859 ./views/start.hbs:27940396/330

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -65,6 +65,14 @@
             Average Number of<br>Teams Per User
         </div>
           </div>
+         <div class="ui small statistic">
+        <div class="value">
+            {{userMostItems}}
+        </div>
+        <div class="label">
+            User With Most Teams
+        </div>
+          </div>
         </div>
         <div class="ui column">
           <div class="ui grid">
