🕹🌨 Checkpoint ./controllers/start.js:27940396/130 ./views/start.hbs:27940396/563

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -38,8 +38,8 @@
           <div class="ui divider"></div>
 
 <h3 class="ui center aligned header">The League App now contains:</h3>
-<div class="ui two statistics">
-    <div class="ui huge statistic">
+<div class="ui three statistics">
+    <div class="ui medium statistic">
         <div class="value">
             {{totalLeagues}}
         </div>
@@ -47,7 +47,7 @@
             Leagues
         </div>
     </div>
-    <div class="ui huge statistic">
+    <div class="ui medium statistic">
         <div class="value">
             {{totalTeams}}
         </div>
@@ -55,17 +55,16 @@
             Teams
         </div>
     </div>
-</div>
-          <div class="ui three statistics">
-            <div class="ui small statistic">
+            <div class="ui medium statistic">
         <div class="value">
             {{averageTeams}}
         </div>
         <div class="label">
-            Average Number of<br>Teams Per User
+            Teams Per User
         </div>
           </div>
-         <div class="ui small statistic">
+         </div>
+          <div class="ui small statistic">
         <div class="value">
             {{userMostItems}}
         </div>
@@ -73,7 +72,6 @@
             User With Most Teams
         </div>
           </div>
-        </div>
         <div class="ui column">
           <div class="ui grid">
             <div class="ui center aligned middle aligned eight wide column">
