🏝📰 Checkpoint ./controllers/start.js:27940396/287 ./views/start.hbs:27940396/588 ./controllers/dashboard.js:27940396/39

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="ui divider"></div>
-
+<div class="ui center aligned segment">
 <h3 class="ui center aligned header">The League App now contains:</h3>
 <div class="ui three statistics">
     <div class="ui medium statistic">
@@ -72,6 +72,16 @@
             User With Most Teams
         </div>
           </div>
+          <div class="ui small statistic">
+        <div class="value">
+            {{userLeastItems}}
+        </div>
+        <div class="label">
+            User With Least Teams
+        </div>
+          </div>
+  </div>
+  </div>
         <div class="ui column">
           <div class="ui grid">
             <div class="ui center aligned middle aligned eight wide column">
