--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -5,7 +5,7 @@
 
 <section class="ui segment">
   <div class="ui center aligned segment">
-<h3 class="ui center aligned header">Hello {{fullname}}! Here are some stats about your leagues!</h3>
+<h3 class="ui center aligned header">Hello {{fullname}}! Here are some personalised stats about your leagues!</h3>
 <div class="ui three statistics">
     <div class="ui medium statistic">
         <div class="value">
@@ -21,6 +21,14 @@
         </div>
         <div class="label">
             Teams
+        </div>
+    </div>
+  <div class="ui medium statistic">
+        <div class="value">
+            {{averageTeams}}
+        </div>
+        <div class="label">
+            Average Number Of <br>Teams Per League
         </div>
     </div>
          </div>
