📡👳 Checkpoint ./controllers/dashboard.js:27940396/914 ./views/dashboard.hbs:27940396/261

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -32,6 +32,14 @@
         </div>
     </div>
          </div>
+            <div class="ui small statistic">
+        <div class="value">
+            {{leagueMostItems}}
+        </div>
+        <div class="label">
+            League With Most Teams
+        </div>
+          </div>
 
   </div>
  {{> addleague}}
