💨🎺 Checkpoint ./controllers/dashboard.js:27940396/56 ./views/dashboard.hbs:27940396/321

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -32,6 +32,8 @@
         </div>
     </div>
          </div>
+    <div class="ui two statistics">
+
             <div class="ui small statistic">
         <div class="value">
             {{leagueMostItems}}
@@ -40,6 +42,15 @@
             League With Most Teams
         </div>
           </div>
+      <div class="ui small statistic">
+        <div class="value">
+            {{leagueLeastItems}}
+        </div>
+        <div class="label">
+            League With Least Teams
+        </div>
+          </div>
+    </div>
 
   </div>
  {{> addleague}}
