🎩⛈ Checkpoint ./views/partials/menu.hbs:27940396/189 ./models/user-store.json:27940396/78 ./controllers/dashboard.js:27940396/70 ./controllers/start.js:27940396/90 ./views/start.hbs:27940396/683

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -38,7 +38,7 @@
           <div class="ui divider"></div>
 <div class="ui center aligned segment">
 <h3 class="ui center aligned header">The League App now contains:</h3>
-<div class="ui three statistics">
+<div class="ui four statistics">
     <div class="ui medium statistic">
         <div class="value">
             {{totalLeagues}}
@@ -55,6 +55,14 @@
             Teams
         </div>
     </div>
+  <div class="ui small statistic">
+        <div class="value">
+            {{totalUsers}}
+        </div>
+        <div class="label">
+            Users
+        </div>
+          </div>
             <div class="ui medium statistic">
         <div class="value">
             {{averageTeams}}
@@ -80,6 +88,7 @@
             User With Least Teams
         </div>
           </div>
+  
   </div>
   </div>
         <div class="ui column">
