🏨🎂 Checkpoint ./views/partials/listleagues.hbs:27940396/3824 ./views/league.hbs:27940396/37 ./views/dashboard.hbs:27940396/14 ./public/style.css:27940396/32

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -3,10 +3,9 @@
 
 
 
-
   <div class="card">
     <div class="image">
-      <img src="{{logo}}">
+      <img class="ui medium image" src="{{logo}}">
     </div>
     <div class="content">
       <div class="header">{{name}}</div>
@@ -19,6 +18,11 @@
       </div>
     </div>
     <div class="extra content">
-      
+      <a href="/league/{{id}}" class="ui icon button">
+      <i class="icon folder open"></i>
+    </a>
+    <a href="/dashboard/deleteleague/{{id}}" class="ui icon button">
+      <i class="icon trash"></i>
+      </a>
     </div>
  {{/each}}
