⏱👹 Checkpoint ./views/partials/listleagues.hbs:27940396/15 ./views/dashboard.hbs:27940396/19

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -54,7 +54,7 @@
 
   </div>
  {{> addleague}}
-  <div class="ui link cards">
+  <div class="ui centered link cards">
   {{> listleagues}}
   </div>
 </section>
