--- a/views/partials/welcomemenu.hbs
+++ b/views/partials/welcomemenu.hbs
@@ -1,5 +1,5 @@
 <nav class="ui menu">
-  <header class="ui header item"> <a href="/"> League App </a></header>
+  <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
   <div class="right menu">
     <a id="signup" class="item" href="/signup"> Signup  </a>
     <a id="login" class="item" href="/login">  Login   </a>
