--- a/public/style.css
+++ b/public/style.css
@@ -34,8 +34,8 @@ h1 {
   text-size:120%;
 }
 .ui.medium.image{
-  height:20em;
-  width: auto;
+  height:auto;
+  width: 10em;
 }
 td .ui.small.image{
   height:10em;
