🎰📙 Checkpoint ./views/start.hbs:27940396/156

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -38,7 +38,7 @@
           <div class="ui divider"></div>
 <div class="ui center aligned segment">
 <h3 class="ui center aligned header">The League App now contains:</h3>
-<div class="ui four statistics">
+<div class="ui four medium statistics">
     <div class="ui medium statistic">
         <div class="value">
             {{totalLeagues}}
@@ -72,7 +72,9 @@
         </div>
           </div>
          </div>
-          <div class="ui small statistic">
+  <br>
+  <div class="ui two tiny statistics">
+    <div class="statistic">
         <div class="value">
             {{userMostItems}}
         </div>
@@ -80,7 +82,7 @@
             User With Most Teams
         </div>
           </div>
-          <div class="ui small statistic">
+          <div class="statistic">
         <div class="value">
             {{userLeastItems}}
         </div>
@@ -88,6 +90,7 @@
             User With Least Teams
         </div>
           </div>
+  </div>
   
   </div>
   </div>
