--- a/views/start.hbs
+++ b/views/start.hbs
@@ -39,7 +39,7 @@
 <div class="ui center aligned segment">
 <h3 class="ui center aligned header">The League App now contains:</h3>
 <div class="ui four medium statistics">
-    <div class="ui medium statistic">
+    <div class="statistic">
         <div class="value">
             {{totalLeagues}}
         </div>
@@ -47,7 +47,7 @@
             Leagues
         </div>
     </div>
-    <div class="ui medium statistic">
+    <div class="statistic">
         <div class="value">
             {{totalTeams}}
         </div>
@@ -55,7 +55,7 @@
             Teams
         </div>
     </div>
-  <div class="ui small statistic">
+  <div class="statistic">
         <div class="value">
             {{totalUsers}}
         </div>
