🍔🙌 Checkpoint ./views/partials/listleagues.hbs:27940396/272

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -5,17 +5,17 @@
     <div class="image">
       <img class="ui medium image" src="{{logo}}">
     </div>
-    <div class="content">
+    <div class="center aligned content">
       <div class="header">{{name}}</div>
       <div class="meta">
-        <a>Friends</a>
+        <a>League</a>
       </div>
-      <div class="description">
+      <div class="center aligned description">
         <span class = "bold"> Country: </span>{{country}} <br>
       <span class = "bold"> Continent: </span>{{continent}}<br>
       </div>
     </div>
-    <div class="extra content">
+    <div class="center aligned extra content">
       <a href="/league/{{id}}" class="ui icon button">
       <i class="icon folder open"></i>
     </a>
