🙍💘 Checkpoint ./views/partials/listleagues.hbs:27940396/56 ./views/partials/addleague.hbs:27940396/16

--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -33,7 +33,7 @@
   </select>
     </div>
         <div class="field">
-      <label>League Logo</label>
+      <label>League Logo (1:1)</label>
       <input placeholder="logo" type="file" name="logo" required>
     </div>
       </div>
