--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -8,7 +8,7 @@
     <div class="center aligned content">
       <div class="header">{{name}}</div>
       <div class="meta">
-        <a>League</a>
+        <a>{{teams.length}} Team(s)</a>
       </div>
       <div class="center aligned description">
         <span class = "bold"> Country: </span>{{country}} <br>
