--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,8 @@ body {
 
 }
 .name{
-  padding-top:20px;
+  font-size:150%;
+  padding-top:.4em;
   padding-right:5px;
   line-height:20px;
   font-weight:bold;
