--- a/views/about.hbs
+++ b/views/about.hbs
@@ -16,4 +16,10 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1188.5536785828897!2d-2.9613183560575465!3d53.43078869345479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b21654b02538b%3A0x84576a57e21973ff!2sAnfield!5e0!3m2!1sen!2sie!4v1616347923356!5m2!1sen!2sie"
           width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
   </iframe>
+
+
+<div class="ui comments">
+  <h3 class="ui dividing header">Comments</h3>
+{{>listcomments}}
+</div>
 </section>
