--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -9,7 +9,7 @@
         <span class="date">Today at 5:42PM</span>
       </div>
       <div class="text">
-        How artistic!
+        {{text}}
       </div>
       <div class="actions">
         <a class="reply">Reply</a>
