--- a/views/partials/addcomment.hbs
+++ b/views/partials/addcomment.hbs
@@ -3,9 +3,9 @@
     <div class="field">
       <textarea name="text" required></textarea>
     </div>
-    <div class="ui blue labeled submit icon button">
+    <button class="ui blue labeled submit icon button">
       <i class="icon edit"></i> Add Reply
-    </div>
+    </button>
   </form>
   
 </div>
