--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -1,10 +1,10 @@
  {{#each comments}}
    <div class="comment">
     <a class="avatar">
-      <img src="/images/avatar/small/matt.jpg">
+      <img src="{{avatar}}">
     </a>
     <div class="content">
-      <a class="author">Matt</a>
+      <a class="author">{{username}}</a>
       <div class="metadata">
         <span class="date">Today at 5:42PM</span>
       </div>
