💃☂️ Checkpoint ./controllers/about.js:27940396/42 ./views/partials/addcomment.hbs:27940396/2

--- a/views/partials/addcomment.hbs
+++ b/views/partials/addcomment.hbs
@@ -1,5 +1,5 @@
 
-<form class="ui reply form" action="/about/addcomment" method="POST" >
+<form class="ui reply form" action="/about/addComment" method="POST" >
     <div class="field">
       <textarea name="text" required></textarea>
     </div>
