--- a/views/partials/addcomment.hbs
+++ b/views/partials/addcomment.hbs
@@ -1,5 +1,5 @@
 
-<form class="ui reply form" action="/about/addComment" method="POST" >
+<form class="ui reply form" action="/about/addcomment" method="POST" >
     <div class="field">
       <textarea name="text" required></textarea>
     </div>
@@ -7,5 +7,3 @@
       <i class="icon edit"></i> Add Reply
     </button>
   </form>
-  
-</div>
