--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -1,7 +1,7 @@
- {{#each comments}}
-   <div class="comment">
+ {{#each comment}}
+   <div class="ui comment">
     <a class="avatar">
-      <img src="{{avatar}}">
+      <img src={{avatar}}>
     </a>
     <div class="content">
       <a class="author">{{username}}</a>
