--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -1,8 +1,8 @@
  {{#each comments}}
    <div class="ui comment">
-    <a class="avatar">
-      <img src={{avatar}}>
-    </a>
+     <a class="avatar">
+      <img class="ui mini image" src={{avatar}}>
+     </a>
     <div class="content">
       <a class="author">{{username}}</a>
       <div class="metadata">
