🛰💷 Checkpoint ./views/partials/listcomments.hbs:27940396/1459 ./views/about.hbs:27940396/530 ./public/style.css:27940396/202

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -18,9 +18,13 @@
   </iframe>
 
 
+</section>
+<div class = "ui segment">
+
 <div class="ui comments">
   <h3 class="ui dividing header">Comments</h3>
 {{>listcomments}}
 </div>
 {{>addcomment}}
-</section>
+    
+</div>
