--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -6,7 +6,7 @@
     <div class="content">
       <a class="author">{{username}}</a>
       <div class="metadata">
-        <span class="date">Today at 5:42PM</span>
+        <span class="date">{{date}}</span>
       </div>
       <div class="text">
         {{text}}
