🚉🐝 Checkpoint ./models/comment-store.json:27940396/1575 ./controllers/about.js:27940396/26 ./views/partials/addcomment.hbs:27940396/9 ./views/partials/listcomments.hbs:27940396/234 ./public/style.css:27940396/156

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -1,8 +1,8 @@
  {{#each comments}}
    <div class="ui comment">
-     
-      <img class="ui mini circular image" src={{avatar}}>
-   
+     <a class="ui avatar">
+      <img class="ui avatar" src={{avatar}}>
+     </a>
     <div class="content">
       <a class="author">{{username}}</a>
       <div class="metadata">
