--- a/views/partials/addcomment.hbs
+++ b/views/partials/addcomment.hbs
@@ -1,7 +1,7 @@
 
 <form class="ui reply form" action="/about/addcomment" method="POST" >
     <div class="field">
-      <textarea name="text" required></textarea>
+      <textarea name="text" rows="2" required></textarea>
     </div>
     <button class="ui blue labeled submit icon button">
       <i class="icon edit"></i> Add Reply
