⛸📹 Checkpoint ./public/style.css:27940396/214 ./views/partials/listcomments.hbs:27940396/76 ./server.js:27940396/78

--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,14 @@ body {
   font-weight:bold;
   text-transform:capitalize;
 }
+.ui.comments .comment img.avatar,
+.ui.comments .comment .avatar img {
+  display: block;
+  margin: 0em auto;
+  width: 100%;
+  height: auto; // 100% doesn't work but auto does
+  border-radius: @avatarBorderRadius;
+}
 h1 {
   font-style: italic;
   color: #4d54ff;
