🐸🏃 Checkpoint ./server.js:27940396/32 ./views/partials/listcomments.hbs:27940396/15

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -6,7 +6,7 @@
     <div class="content">
       <a class="author">{{username}}</a>
       <div class="metadata">
-        <span class="date">{{date}}</span>
+        <span class="date">{{formatDate date}}</span>
       </div>
       <div class="text">
         {{text}}
