⛸🎯 Checkpoint ./routes.js:27940396/24 ./views/partials/listcomments.hbs:27940396/174 ./controllers/about.js:27940396/82 ./models/comment-store.json:27940396/414

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -11,6 +11,8 @@
       <div class="text">
         {{text}}
       </div>
+       {{/each}}
+      {{#if loggedInUser==userId}}
+       <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
     </div>
   </div>
- {{/each}}
