🗻⚽️ Checkpoint ./views/partials/listcomments.hbs:27940396/198 ./server.js:27940396/184

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -11,8 +11,10 @@
       <div class="text">
         {{text}}
       </div>
-       {{/each}}
-      {{#if loggedInUser==userId}}
+       
+      {{#if (eq loggedInUser userId)}}
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
+      {{/if}}
     </div>
   </div>
+{{/each}}
