🌌💺 Checkpoint ./server.js:27940396/336 ./views/partials/listcomments.hbs:27940396/122

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -12,8 +12,7 @@
         {{text}}
       </div>
        
-      {{#if (eq loggedInUser userId)}}
-       <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
+       <a href = "/about/deleteComment/{{showDelete UserId, lid}}" class="reply">Delete</a>
       {{/if}}
     </div>
   </div>
