🏈🏣 Checkpoint ./views/partials/listcomments.hbs:27940396/14

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -12,7 +12,7 @@
         {{text}}
       </div>
        
-       <a href = "/about/deleteComment/{{showDelete UserId, lid}}" class="reply">Delete</a>
+       <a href = "/about/deleteComment/{{showDelete (userId,loggedInUser,id)}}" class="reply">Delete</a>
       {{/if}}
     </div>
   </div>
