--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -11,9 +11,8 @@
       <div class="text">
         {{text}}
       </div>
-       
-       <a href = "/about/deleteComment/{{showDelete (userId,loggedInUser,id)}}" class="reply">Delete</a>
-      {{/if}}
+       {{if loggedInUser=userId}}
+       <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
     </div>
   </div>
 {{/each}}
