🍴🎳 Checkpoint ./server.js:27940396/1291 ./views/partials/listcomments.hbs:27940396/48

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -11,6 +11,7 @@
       <div class="text">
         {{text}}
       </div>
+      {{if_eq userId loggedInUser}}
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
     </div>
   </div>
