👂🐆 Checkpoint ./views/partials/listcomments.hbs:27940396/126 ./views/about.hbs:27940396/90 ./routes.js:27940396/68

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -11,8 +11,9 @@
       <div class="text">
         {{text}}
       </div>
-      {{if_eq userId loggedInUser}}
+
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
+      <a href = "/about/editComment/{{id}}" class="reply">Edit</a>
     </div>
   </div>
 {{/each}}
