🛰🌴 Checkpoint ./models/comment-store.js:27940396/724 ./views/partials/listcomments.hbs:27940396/397 ./public/style.css:27940396/276

--- a/public/style.css
+++ b/public/style.css
@@ -50,6 +50,11 @@ td .ui.small.image{
   height:10em;
   width: auto;
 }
+.ui.comments
+{
+    max-height: 100em;
+    overflow-y: scroll;
+}
 iframe{
   margin: 2em 0 0 0;
    border: 1em solid grey;
