--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -14,10 +14,10 @@
 
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
       <a onclick="showHideLeague()" class="reply">Edit</a>
-      <form class = "ui stacked segment form" id="league" action="/about/updateComment/{{id}}" method="POST">
+      <form class = "ui fluid segment form" id="league" action="/about/updateComment/{{id}}" method="POST">
         <div class="field">
         <span class="ui input">
-         <input type="text" name="text" autofocus required title = "Please include some edited text" placeholder="Position" value = "{{text}}">
+         <input type="text" name="text" autofocus required title = "Please include some edited text" placeholder="Position" value = "{{text}}"> 
           <button class="ui submit icon button"><i class="icon pencil alternate"></i></button>
         </span>
       </div>
