--- a/views/about.hbs
+++ b/views/about.hbs
@@ -21,8 +21,8 @@
 </section>
 <div class = "ui segment">
 <h3 class="ui dividing header">Comments</h3>
-<div class="ui comments"> 
-{{>listcomments currentUserId}}
+<div class="ui comments">
+{{>listcomments this.currentUserId}}
 </div>
 {{>addcomment}}
     
