⚾️🍢 Checkpoint ./views/partials/listcomments.hbs:27940396/58 ./views/about.hbs:27940396/93

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -13,7 +13,7 @@
         {{currentUserId}} <br>
         {{userId}}
       </div>
-{{#ifEquals currentUserId userId}}
+{{#ifEquals 1 userId}}
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
       <a onclick="showHideLeague()" class="reply">Edit</a>
       <form class = "ui fluid segment form" id="league" action="/about/updateComment/{{id}}" method="POST">
