🌨🎮 Checkpoint ./views/partials/listcomments.hbs:27940396/29 ./views/about.hbs:27940396/60 ./controllers/accounts.js:27940396/68

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -22,7 +22,7 @@
 <div class = "ui segment">
 <h3 class="ui dividing header">Comments</h3>
 <div class="ui comments">
-{{>listcomments currentUserId=currentUserId}}
+{{>listcomments currentUserId='currentUserId'}}
 </div>
 {{>addcomment}}
     
